--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Ag Here </h1>
     </div>
 
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
     
 </body>
 </html>
